# MintBot

./: .gitignore  1.GPT-Sovits.bat  1.启动GPT-Sovits.bat  2.MintChat.bat  2.启动MintChat.bat  AGENTS.md  LICENSE  Makefile  MintChat.bat  MintChat.py  MintChat.sh  README.md  config.dev.yaml  config.dev.yaml.example  config.user.yaml.example  config.yaml.example  environment.yml  flowchart_TD.txt  pyproject.toml  pytest.ini  requirements.txt  text.py
archives/: README.md  archive.sqlite3
backups/gui_optimization_20251116_150151/: integration_code.txt  light_chat_window.py  test_optimization.py
docs/: CHANGELOG.md  LOGGING.md  README.md  gui_blueprint.md
examples/: advanced_features_demo.py  async_streaming_chat.py  basic_chat.py  emotion_demo.py  multimodal_complete_demo.py  multimodal_demo.py  performance_demo.py  quick_demo.py  simple_test.py  streaming_chat.py  tool_usage.py  v25_features_demo.py
scripts/: README.md  add_test_memories.py  apply_gui_optimization_v2.30.27.py  archive_manager.py  audit_config_system.py  auto_add_type_hints_v2.30.13.py  auto_fix_code_quality_v2.30.12.py  check_database_v2.30.13.py  check_install.py  check_memory_leaks.py  clean.py  cleanup_redundant_code_v2.29.13.py  code_quality_check.py  comprehensive_gui_test_v2.30.27.py  comprehensive_quality_check_v2.30.13.py  debug_tts_sample.py  deep_code_quality_check_v2.30.12.py  dependency_check_v2.30.12.py  diagnose_history_issues_v2.30.13.py  diagnose_message_loading_v2.30.13.py  fix_code_quality_v2_30_1.py  fix_code_style.py  fix_duplicate_messages_v2.30.13.py  fix_emoji_upload.py  fix_encoding.py  fix_pkg_resources_warning.py  fix_unused_imports_v2_30_4.py  init_user_data_db_v2.30.13.py  migrate_config_split.py  migrate_history_data_v2.30.13.py  mintchat_light_gui.py  optimize_gui_code.py  organize_docs.py  performance_benchmark.py  performance_optimization_v2.29.13.py  performance_optimization_v2.30.12.py  performance_test_v2.30.27.py  prune_config_keys.py  quick_start.py  remove_version_comments.py  (+40 more)
src/: __init__.py  version.py
src/agent/: __init__.py  advanced_memory.py  builtin_tools.py  character_state.py  context_compressor.py  core.py  emotion.py  hybrid_retriever.py  knowledge_graph.py  knowledge_quality.py  knowledge_recommender.py  mcp_manager.py  memory.py  memory_optimizer.py  memory_retriever.py  memory_scorer.py  mood_system.py  performance_optimizer.py  style_learner.py  tool_selector_middleware.py  tool_trace_middleware.py  tools.py
src/auth/: __init__.py  auth_service.py  database.py  session_store.py  user_data_manager.py  user_session.py
src/character/: __init__.py  config_loader.py  personality.py  prompts.py
tests/: README.md  conftest.py  test_advanced_memory_import_pack.py  test_advanced_performance_globals.py  test_agent_close_long_term_flush.py  test_agent_init_dedup.py  test_agent_memory_import.py  test_asr_hub_autofix.py  test_asr_initializer_trust_remote_code.py  test_asr_model_id_normalization.py  test_asr_postprocess.py  test_async_db_optional_dependency.py  test_async_loop_thread.py  test_async_processor.py  test_auth_email_login.py  test_builtin_tools_amap_key_env.py  test_builtin_tools_connection_pool.py  test_bundle_prepare_timeout_fallback.py  test_cache_manager.py  test_character_consistency_scorer.py  test_character_state_persist_throttle.py  test_chat_history_keyset.py  test_chroma_helper_embedding_reuse.py  test_config_examples_surface.py  test_config_split.py  test_context_compressor.py  test_custom_stickers_cache.py  test_db_pool_deadlock.py  test_embedding_cache.py  test_emotion_mood_system.py  test_gui_batch_renderer_dedup.py  test_hot_path_persistence_deferral.py  test_hybrid_retriever.py  test_implicit_tool_rescue.py  test_knowledge_graph.py  test_live2d_expression_cache_refresh.py  test_live2d_model_sanitizer.py  test_live2d_state_directives.py  test_live2d_state_event_inference.py  test_live2d_state_event_mapping.py  (+58 more)
(+170 files in other folders)
